--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@prisma/client": "^4.4.0",
     "dotenv": "^16.0.2",
     "fastify": "^4.6.0",
-    "fastify-jwt": "^4.2.0",
+    "fastify-jwt": "^4.1.3",
     "fastify-swagger": "^5.2.0",
     "fastify-zod": "^1.2.0",
     "http-status-codes": "^2.2.0",
@@ -28,6 +28,7 @@
     "zod-to-json-schema": "^3.18.1"
   },
   "devDependencies": {
+    "@types/fastify-jwt": "^0.8.1",
     "@types/node": "^18.7.23",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
