--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "homepage": "https://github.com/ngogiaphong123/Fastify-Prisma-API#readme",
   "dependencies": {
+    "@fastify/static": "5.0.0",
     "@prisma/client": "^4.4.0",
     "dotenv": "^16.0.2",
-    "fastify": "^4.6.0",
+    "fastify": "3.27.2",
     "fastify-jwt": "^4.1.3",
-    "fastify-swagger": "^5.2.0",
+    "fastify-swagger": "4.15.0",
     "fastify-zod": "^1.2.0",
     "http-status-codes": "^2.2.0",
     "zod": "^3.19.1",
